change mute icons

--- a/app/src/main/res/values/theme_attrs.xml
+++ b/app/src/main/res/values/theme_attrs.xml
@@ -122,6 +122,8 @@
     <attr name="callIconDisabledColor" format="color" />
     <attr name="callTextDisabledColor" format="color" />
     <attr name="callIconDisabledActivatedColor" format="color" />
+    <attr name="callMutedIcon" format="reference"/>
+    <attr name="callUnmutedIcon" format="reference"/>
 
     <!-- OTR -->
     <attr name="otrClientLink" format="reference" />
